# Gimme-Idea

./: .env.example  .gitignore  BACKEND_COMPLETE.md  BUILZER.md  CHECK_VERCEL_SETTINGS.md  CLOUDFLARE_SETUP.md  DEPLOYMENT_GUIDE.md  ENV_VARS_CHECKLIST.md  FIX_CORS_ERROR.md  MAINTENANCE_MODE.md  NOTION_README.md  POLYFILL_FIX.md  PRODUCTION_SETUP.md  PROJECT_STATUS.md  PROJECT_STATUS_VI.md  PROJECT_STRUCTURE.md  README.md  README2.md  README3.md  REALTIME_FEATURES.md  RENDER_SETUP.md  REPORT_BUILZER.md  REQUIRED_ENV_VARS.md  SIMPLE_FIX_GUIDE.md  TIENDO.md  dev-docs  devnote.md  message.txt  railway.toml  render.yaml
GMI-BE/: nixpacks.toml  test-db.js
GMI-SC/: Anchor.toml
backend/: .env.example  README.md  SETUP.md  WALLET_PERSISTENCE_GUIDE.md  package.json  startup.out  tsconfig.json
components/: TipModal.tsx
docs/: FEATURE_STATUS.md  README.md  SPEC_PHASE1_COMMIT_TO_BUILD.md  agent-auth-design.md  agent-playbooks.md
front-end/: package.json  pnpm-lock.yaml
frontend/: .env.example  App 2.tsx  App.tsx  README.md  constants 2.ts  constants.ts  index 2.html  index.html  middleware.ts  next.config.js  package.json  polyfills.js  tailwind.config 2.js  tailwind.config.js  tsconfig.tsbuildinfo  types 2.ts
gimme-idea-new-ui/: index.html
lib/: api.ts  supabase.ts
mobile-apk/: .gitignore  capacitor.config.ts  package.json
programs/: .gitignore  Anchor.toml  Cargo.toml  README.md
programs/gimme-idea/: Cargo.toml
programs/gimme-idea/src/: lib.rs
scripts/: recover-liquidity.ts  test-agent-pat-flow.sh
server/: .env.example  .gitignore  README.md  package.json  (+4 more)
(+377 files in other folders)
