[package]
name = "gimme-idea"
version = "0.1.0"
description = "Solana Smart Contract for Gimme Idea - Bounty Escrow System"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gimme_idea"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

[dev-dependencies]
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"
